# xtquant-grpc

./: .gitignore  CHANGELOG.md  README.md  gen_proto.py  main.py  pyproject.toml
docs/: financial_data.md
pb/: __init__.py  xtquant_pb2.py  xtquant_pb2.pyi  xtquant_pb2_grpc.py
proto/: xtquant.proto
scripts/: test_financial_data.py
server/: __init__.py  market_data.py  trading.py
test/: conftest.py  test_grpc_server.py  test_trading.py  test_xtdata_direct.py  verify_order_cancel.py  verify_trading_live.py
